# ekf9dof

./: .gitignore  CMakeLists.txt  Dockerfile  QUICKSTART.md  README.md  README_debug.md  SENSOR_MONITOR.md  docker_entrypoint.sh  requirements.txt  setup_jetson.sh
.github/agents/: my-agent.agent.md
_codeql_build_dir/: CTestTestfile.cmake  cmake_install.cmake  ekf9dof
_codeql_build_dir/tests/: CTestTestfile.cmake  cmake_install.cmake
cmake/: aarch64-jetson-nano-toolchain.cmake
configs/: config.yaml
data/analysis/: ellipsoid_fitting_utils.py  ellipsoid_imu_cal.ipynb  plot_accel_data.ipynb  plot_gyro_data.ipynb  plot_mag_data.ipynb  plot_temp_data.ipynb  requirements.txt
docs/: ARCHITECTURE.md  CALIBRATION.md  CHANNEL_ARCHITECTURE.md  COORDINATE_FRAMES.md  CROSS_PLATFORM_BUILD.md  EXAMPLE_CONSUMER.cpp  MAGNETOMETER_CALIBRATION.md  binary_logging.md  logging_quickstart.md  quaternion_math.md  quaternion_math.md.backup
examples/: CMakeLists.txt  sensor_usage_example.cpp
hardware/: camarray_bracket.scad  camera_bracket.scad  mount_assy.scad  stand_off.scad
hardware/assemblies/: top_assy.scad
hardware/models/: adafruit_lsm9ds0_mount.scad  adafruit_lsm9ds0_pcb.scad  camarray_hat.scad  imager_pcb.scad  orin_dev_board_env.scad  orin_nano_board_envelope.scad  slot_fixture.scad  upright_bracket.scad
include/: config_loader.hpp  lsm9ds0.hpp  lsm9ds0_config.hpp  lsm9ds0_device.hpp  mag_calibration.hpp
include/common/: Quat.hpp  channel.hpp  channel_types.hpp  config_loader.hpp  custom_time_methods.hpp  i2c_device.hpp  quaternion.hpp  so3.hpp
include/ekf9dof/: README.md  sensor.hpp  so3.hpp
include/imu/drivers/: bmp280_driver_example.hpp  lsm9ds0_device.hpp  lsm9ds0_driver.hpp  lsm9ds0_driver_internal.hpp
include/imu/messages/: imu_data.hpp
include/imu/processing/: imu_preprocessor.hpp  imu_processing.hpp  sensor.hpp
lsm9ds0_imu/: CMakeLists.txt  package.xml
lsm9ds0_imu/config/: imu.yaml
lsm9ds0_imu/include/lsm9ds0_imu/: lsm9ds0_driver.hpp
lsm9ds0_imu/src/: lsm9ds0_driver.cpp  lsm9ds0_node.cpp
scripts/: CALIBRATION_QUICK_START.md  README.md  ellipsoid_imu_cal.ipynb  lsm9ds0_check.sh  plot_sensor_data.ipynb  plot_sensor_data.py  requirements.txt  setup_jetson.sh
src/: calibrate_accel.cpp  calibrate_mag.cpp  config_loader.cpp  lsm9ds0.cpp  mag_calibration.cpp  main.cpp  sensor_monitor.cpp
src/common/: Quat.cpp  config_loader.cpp  custom_time_methods.cpp  i2c_device.cpp  quaternion.cpp
src/imu/drivers/: lsm9ds0.cpp  lsm9ds0_driver.cpp
src/imu/processing/: imu.cpp  imu_preprocessor.cpp  mag_calibration.cpp
src/tools/: calibrate_mag.cpp  main.cpp  sensor_monitor.cpp
stereo_camera_bringup/: CMakeLists.txt  package.xml
stereo_camera_bringup/launch/: stereo_camera.launch.py
stereo_camera_bringup/src/: argus_stereo_node.cpp  v4l2_stereo_node.cpp
stereo_vo/: CMakeLists.txt  package.xml
stereo_vo/config/: params.yaml
stereo_vo/include/stereo_vo/core/: feature_tracker.hpp  imu_preintegrator.hpp  pose_estimator.hpp  sliding_window.hpp  stereo_matcher.hpp
stereo_vo/launch/: vo_stereo.launch.py
stereo_vo/scripts/: calibrate_stereo.py  eval_kitti_like.py  record_bag.sh
stereo_vo/src/core/: feature_tracker.cpp  imu_preintegrator.cpp  pose_estimator.cpp  sliding_window.cpp  stereo_matcher.cpp
stereo_vo/src/ros/: vo_node.cpp
stereo_vo/test/: test_feature_tracker.cpp  test_pose_estimator.cpp
tests/: CMakeLists.txt  test_calibration.cpp  test_config_loader.cpp  test_mag_calibration.cpp  test_sensor.cpp  test_so3.cpp  test_so3.cpp.broken
tools/: bin2csv.cpp  sensor2csv.cpp
